--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span>A turtle is mugged by three snails. When asked by police to give a description of what happened, he
             replies, "I
             don't
-            know, it all happened so fast!"</span>
+            know, it all happened so fast!"<p>I will display &#128512;</p></span>
     </p>
     <div class="btn-particles">
         <button id="btn">Jokes Read</button>
@@ -34,5 +34,5 @@
 
 </html>
 
-<script src="./script.js"></script>
+<script type="text/javascript" src="./script.js"></script>
 <!-- <img class="memecasesImg" src="${preview[0]}" alt="img" /> -->
