--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
 
 
 <body>
-    <p>A joke is a display of humour in which words are used within a specific and well-defined narrative structure to
-        make
-        people laugh and is usually not meant to be taken seriously. It takes the form of a story, usually with dialogue
-        <br />
-        <span>A turtle is mugged by three snails. When asked by police to give a description of what happened, he
+    <h1>Random joke pics</h1>
+    <br />
+    <p><span>A turtle is mugged by three snails. When asked by police to give a description of what happened, he
             replies, "I
             don't
             know, it all happened so fast!"<p>I will display &#128512;</p></span>
     </p>
     <div class="btn-particles">
-        <button id="btn">Jokes Read</button>
+        <button id="btn">Jokes Read hit </button>
         <div id="results"></div>
     </div>
 
