--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <p><span>A turtle is mugged by three snails. When asked by police to give a description of what happened, he
             replies, "I
             don't
-            know, it all happened so fast!"<p>I will display &#128512;</p></span>
+            know, it all happened so fast</span>
     </p>
     <div class="btn-particles">
-        <button id="btn">Jokes Read hit </button>
+        <button id="btn">Jokes Read hit 2 times &#128512;</button>
         <div id="results"></div>
     </div>
 
